| Bug #6935 | table rename does not work with ndb tables | ||
|---|---|---|---|
| Submitted: | 2 Dec 2004 8:08 | Modified: | 7 Dec 2004 9:38 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 4.1.8 source | OS: | Linux (linux) |
| Assigned to: | Martin Skold | CPU Architecture: | Any |
[2 Dec 2004 8:08]
Tomas Ulin
[6 Dec 2004 10:04]
Martin Skold
This does not work with any storage engine, tried innodb and myisam. Seems to be a problem with my_rename (called from rename_file_ext). There are some bugs in the ndb rename_table implementation, I will fix those and move this bug report (alt. create a new one) on server category.
[6 Dec 2004 10:35]
Martin Skold
Was error in test case, using database TEST instead of test, which of course always should fail.
