Fix for bug#6935 table rename does not work with ndb tables